tests/samples/negative/expressions/increment_syntax.ax
module increment_syntax;

fn main() -> i32 {
    var value: i32 = 1;
    value++;
    return value;
}
